# Clothing_similarity

./: .gitignore  database.py  docker-compose.yml  links.txt  main.py  model.py  preprocess_data.py  scrape.py  start.sh  stop.sh
backend/: pom.xml
clothing-app/: package-lock.json  package.json
clothing-app/src/: App.tsx
clothing-app/src/pages/: ClothingItems.tsx  UploadForm.tsx
legacy/: .gitignore  Dockerfile.model  docker-compose.yml  requirements.txt
legacy/model/: database.py  main.py  model.py  preprocess_data.py  scrape.py
legacy/model/logs/: events.out.tfevents.1686434476.DESKTOP-7EQK6TV.19064.0
model/: database.py  main.py  model.py  preprocess_data.py  scrape.py
monorepo/airflow/: Dockerfile  airflow.compose.yaml  docker-compose.yml  requirements.txt
monorepo/airflow/dags/: scraper_html_dag.py  scraper_listing_dag.py  test_consumer.py  test_producer.py
monorepo/database/: Dockerfile  init-airflow-db.sh  schema.sql
monorepo/kafka/: docker-compose.yml  kafka.compose.yml
monorepo/models/: README.md  docker-compose.yml  mlflow.Dockerfile  pyproject.toml
monorepo/models/custom_datasets/: sql_dataset.py  zip_dataset.py
monorepo/models/utils/: insert_config.py  load_config.py  schemas.py
monorepo/models/vit/: model.py  test.py  train.py
monorepo/models/vit/cfgs/: test_config.yml
monorepo/postgres/: Dockerfile
monorepo/scrapper/: listing_scraper.py  scrapper_html.py
monorepo/scrapper/json_dataset/: 2024-08-07 21-21-58_nr1.json  2024-08-07 21-21-58_nr10.json  2024-08-07 21-21-58_nr11.json  2024-08-07 21-21-58_nr12.json  (+236 more)
(+14 files in other folders)
