[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "utils", from = "." },
    { include = "vit", from = "." },
    { include = "custom_datasets", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.43.3"
torch = "^2.4.0"
datasets = "^2.20.0"
jsonschema = "^4.23.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
